# msgio

./: README.md  pyproject.toml
msgio/: __init__.py  _hub.py  _message.py  _pipeline.py
tests/: test_empty_pipeline.py
